2009-02-04  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorCompletion.cs: fixed "Bug 469910 -
	  Incorrect type resolution on attributes".

2009-02-04  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs: fixed 'Bug 471935 - Code
	  completion window not showing in MD1CustomDataItem.cs'.

2009-02-03  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorIndentation.cs: disabled caret beyond
	  eol feature.

2009-02-03  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs:
	* CSharpBinding.addin.xml: Bump MD version.

2009-02-03  Lluis Sanchez Gual  <lluis@novell.com>

	* CSharpBinding.mdp:
	* gtk-gui/gui.stetic: Fix target gtk# version.

2009-02-03  Lluis Sanchez Gual  <lluis@novell.com>

	* CSharpBinding.mdp:
	* gtk-gui/CSharpBinding.CompilerOptionsPanelWidget.cs:
	  Updated.

2009-02-02  Lluis Sanchez Gual  <lluis@novell.com>

	* Project/CSharpResourceIdBuilder.cs: Track api changes.

2009-01-30  Lluis Sanchez Gual  <lluis@novell.com>

	* CSharpBinding.mdp:
	* Autotools/Makefile.am:
	* Gui/CSharpAmbience.cs:
	* Parser/NRefactoryParser.cs:
	* Parser/FindMemberAstVisitor.cs:
	* Gui/CSharpTextEditorCompletion.cs: Add support for constraints in
	generic methods.

2009-01-30  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorIndentation.cs: Added virtual spaces based on
	indentation level.

2009-01-27  Lluis Sanchez Gual  <lluis@novell.com>

	* Parser/NRefactoryParser.cs: Track api changes.

2009-01-27  Mike Krüger  <mkrueger@novell.com>

	* Parser/mcs:
	* Makefile.am:
	* Parser/mcs/mcs:
	* CSharpBinding.mdp:
	* Parser/mcs/dom.cs:
	* gtk-gui/gui.stetic:
	* Parser/mcs/mcs/PLAN:
	* Parser/mcs/mcs/TODO:
	* Parser/mcs/External:
	* Parser/mcs/mcs/NOTES:
	* gtk-gui/generated.cs:
	* Parser/mcs/mcs/OTODO:
	* Parser/mcs/mcs/README:
	* Gui/ResolveVisitor.cs:
	* Parser/mcs/mcs/doc.cs:
	* Parser/mcs/mcs/linq.cs:
	* Parser/mcs/mcs/mcs.sln:
	* Parser/mcs/mcs/enum.cs:
	* Parser/mcs/mcs/decl.cs:
	* Parser/mcs/mcs/const.cs: