@@ -1,5 +1,11 @@
 2009-02-04  Mike Krüger  <mkrueger@novell.com>
 
+	* Gui/ResolveVisitor.cs: fixed "Bug 466719 - Code completion
+	  doesn't activate with '.' inside expression using '::'
+	  operator.".
+
+2009-02-04  Mike Krüger  <mkrueger@novell.com>
+
 	* Gui/CSharpTextEditorCompletion.cs: fixed "Bug 469910 -
 	  Incorrect type resolution on attributes".
 
